# adte-detection-triage-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Handoff.md  LESSONS.md  README.md  SECURITY.md  pyproject.toml  railway.json  render.yaml
.claude/: settings.local.json
adte/: __main__.py  case_policy.py  cli.py  config.py  decision_policy.py  engine.py  llm_assist.py  models.py  report.py  server.py
adte/adapters/: entra_id.py  sentinel.py  wazuh.py
adte/data/: mitre_technique_map.yaml
adte/intel/: _mock.py  abuseipdb.py  aggregator.py  mitre_mapper.py  otx.py  sigma_fp_registry.py  threat_intel.py  virustotal.py
adte/llm/: assist.py  enrichment.py
adte/store/: audit_log.py  case_store.py  session_store.py  user_history.py
adte/utils/: geo.py
docs/: ALERT_ROUTING.md  ARCHITECTURE.md  AUTO_TICKET.md  DECISIONS.md  EXAMPLE_WALKTHROUGH.md  EXTENSIONS.md  INJECTION_GAP_REPORT.md  PROJECT_PROGRESS.md  RUNDOWN.md  SAFETY.md  WAZUH_MALWARE_INTEGRATION.md
examples/: fp_registry.yaml  incident_account_takeover_tor_exfil.json  incident_benign_vpn_travel.json  incident_impossible_travel_mfa_fatigue.json  incident_needs_human_ambiguous.json  wazuh_malware_01_file_added.json  wazuh_malware_02_virustotal_conviction.json  wazuh_malware_03_active_response_deleted.json  wazuh_malware_04_second_host_campaign.json
frontend/: index.html  package-lock.json  package.json
scripts/: alert_router.py  ticket_client.py
tests/: conftest.py  test_audit_log.py  test_case_policy.py  test_case_store.py  test_cases_api.py  test_cluster_integration.py  test_cluster_signal.py  test_cors_origins.py  test_demo_stories.py  test_engine.py  test_feedback.py  test_file_integration.py  test_file_signal.py  test_geo.py  test_intel.py  test_intel_hash.py  test_kill_chain.py  test_llm_assist.py  test_llm_cache.py  test_llm_enrichment.py  test_mitre_map_schema.py  test_mitre_mapper.py  test_native_mitre.py  test_peek_correlation.py  test_policy.py  test_prompt_injection_adversarial.py  test_rbac_recruiter.py  test_safety.py  test_schema_migration.py  test_session_store.py  test_sql_injection.py  test_stats_endpoints.py  test_ti_cache_quota.py  test_ticket_client.py  test_triage_batch.py  test_triage_input_formats.py  test_verdict_export.py  test_wazuh_adapter.py
(+3 files in other folders)
