[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adte-detection-triage-engine"
version = "0.1.0"
description = "Automated Detection Triage Engine — source-agnostic security alert triage with weighted signals and explainable verdicts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ADTE Team"},
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "typer>=0.9,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "pydantic-settings>=2.0,<3.0",
    "requests>=2.32.4,<3.0",
    "flask>=3.0,<4.0",
    "anthropic>=0.25,<1.0",
    "flask-limiter>=3.5,<4.0",
    "flask-cors>=4.0,<5.0",
    "gunicorn>=22.0,<24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<10.0",
    "pytest-cov>=4.0,<6.0",
    "ruff>=0.3,<1.0",
    "mypy>=1.8,<2.0",
    "responses>=0.25,<1.0",
]

[project.scripts]
adte = "adte.cli:app"

[tool.setuptools.packages.find]
include = ["adte*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
